--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "express": "3.1.0",
-    "jade": "*",
-    "poet": "*"
+    "jade": "0.30.0",
+    "poet": "0.2.7"
   }
 }
